--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <meta name="author" content="Karolis Strazdas">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     <script src="assets/js/main.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W2H4RB9KP6"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-W2H4RB9KP6');
+    </script>
+
     <title> Karolis Strazdas </title>
 </head>
 
