Open links in new tab, reduce quote font size on mobile.

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                 </div>
 
                 <div class="flex">
-                    <a href="https://www.linkedin.com/in/karolis-strazdas">
+                    <a href="https://www.linkedin.com/in/karolis-strazdas" target="_blank">
                         <span class="icon medium interactive linkedin"></span>
                     </a>
 
-                    <a href="https://www.github.com/Eoic">
+                    <a href="https://www.github.com/Eoic" target="_blank">
                         <span class="icon medium interactive github"></span>
                     </a>
                 </div>
@@ -192,7 +192,7 @@
                 </div>
 
                 <hr />
-                <h3> <a class="link bordered" href="https://github.com/Eoic/Papyrus" target="blank"> Papyrus </a> -
+                <h3> <a class="link bordered" href="https://github.com/Eoic/Papyrus" target="_blank"> Papyrus </a> -
                     cross-platform e-book management system </h3>
                 <div>
                     <p>
@@ -239,14 +239,14 @@
                 </div>
 
                 <hr />
-                <h3> <a class="link bordered" href="https://github.com/Eoic/NetBots" target="blank"> NetBots </a> -
+                <h3> <a class="link bordered" href="https://github.com/Eoic/NetBots" target="_blank"> NetBots </a> -
                     multiplayer robot programming game </h3>
                 <div>
                     <p>
                         Briefly, it's a robot battle tank programming game that runs in the browser, similar to games
                         such
-                        as <a class="link bordered" href="https://robocode.sourceforge.io/"> Robocode </a> and <a
-                            class="link bordered" href="https://screeps.com/"> Screeps </a>.
+                        as <a class="link bordered" href="https://robocode.sourceforge.io/" target="_blank"> Robocode </a> and <a
+                            class="link bordered" href="https://screeps.com/" target="_blank"> Screeps </a>.
                         You can write a script to you robot and make it fight against robots of other players in
                         real-time.
                     </p>
@@ -314,7 +314,7 @@
                     <p>
                         Based on not so terribly exciting title, you can probably guess what this is about. Anyway, the
                         idea is a colony management
-                        game, something like <a class="link bordered" href="http://www.bay12games.com/dwarves/"> Dwarf
+                        game, something like <a class="link bordered" href="http://www.bay12games.com/dwarves/" target="_blank"> Dwarf
                             Fortress </a> but in 3D, with multiplayer and focus on highly dynamic
                         environment (e.g. liquid simulation, plant growth, weather).
                     </p>
