--- a/index.html
+++ b/index.html
@@ -270,6 +270,39 @@
             </article>
 
             <article>
+                <div data-timespan>
+                    <span> Project </span> &bull;
+                    <span> June, 2023 </span> →
+                    <span> Now </span>
+                    <span data-date-from="2023-06-03" data-duration></span>
+                </div>
+
+                <hr />
+                <h3> <a class="link bordered" href="https://github.com/Eoic/JigsawQuest" target="_blank"> JigsawQuest </a> -
+                    jigsaw puzzle solving game </h3>
+                <div>
+                    <p>
+                        Jigsaw puzzle solving game, where user can create a puzzle solving session by selecting provided default image or uploading their own.
+                        Puzzles can be solved individually or with friends in real-time.
+                    </p>
+
+                    <b> Features </b>
+                    <ul>
+                        <li> Solo and multiplayer solving sessions </li>
+                        <li> Custom puzzle configurations (e.g. image, number of pieces, piece placement) </li>
+                        <li> Achievements and statistics </li>
+                    </ul>
+                </div>
+                <hr />
+                <div class="technologies">
+                    <span> TypeScript </span>
+                    <span> React </span>
+                    <span> Deno </span>
+                    <span> Redis </span>
+                </div>
+            </article>
+
+            <article>
                 <div>
                     <span> Project </span> &bull;
                     <span> Planned </span>
