Update quotes page.

--- a/index.html
+++ b/index.html
@@ -368,6 +368,9 @@
                 those.
             </p>
 
+            <p> Nothing here yet... </p>
+
+            <!-- 
             <article>
                 <p class="quote">
                     &ldquo;I hate them (coffee drinkers) for the same reason I hate enlightenment faggots, the spiritual
@@ -410,6 +413,7 @@
                 </p>
                 <span> - Anonymous user, 4chan's /pol/ board. </span>
             </article>
+            -->
         </section>
 
         <section data-content="notes" class="notes">
