--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Full stack web developer at Indeform Ltd. Interested in various programming paradigms, computer graphics, 3D modelling, and always eager to explore and learn new technologies."/>
     <meta name="author" content="Karolis Strazdas" />
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/assets/images/favicon/site.webmanifest">
-    <script src="assets/js/main.js" async></script>
+    <link rel="stylesheet" type="text/css" href="./assets/css/main.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./assets/images/favicon/site.webmanifest">
+    <script src="./assets/js/main.js" async></script>
     <title>Karolis Strazdas</title>
   </head>
 
