--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon/favicon-16x16.png">
     <link rel="manifest" href="./assets/images/favicon/site.webmanifest">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W2H4RB9KP6"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-W2H4RB9KP6');
+    </script>
     <script src="./assets/js/main.js"></script>
     <title>Karolis Strazdas</title>
   </head>
