--- a/index.html
+++ b/index.html
@@ -3,15 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Full stack web developer at Indeform Ltd. Interested in various programming paradigms, computer graphics, 3D modelling, and always eager to explore and learn new technologies."/>
     <meta name="author" content="Karolis Strazdas" />
+    <meta name="keywords" content="personal, portfolio, web developer, karolis strazdas">
+
+    <link rel="canonical" href="https://karolis-strazdas.info">
     <link rel="stylesheet" type="text/css" href="./assets/css/main.css" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Karolis Strazdas">
+    <meta property="og:description" content="A personal website.">
+    <meta property="og:image" content="https://karolis-strazdas.info/assets/images/avatar.jpg">
+    <meta property="og:url" content="https://karolis-strazdas.info">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Karolis Strazdas">
+
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon/favicon-16x16.png">
     <link rel="manifest" href="./assets/images/favicon/site.webmanifest">
-    <script src="./assets/js/main.js"></script>
+
+    <script src="./assets/js/main.js" defer></script>
     <title>Karolis Strazdas</title>
   </head>
 
@@ -39,7 +54,7 @@
             <h3>Kaunas, Lithuania</h3>
           </div>
 
-          <div class="flex">
+          <div class="flex col-gap-1">
             <a
               href="https://www.linkedin.com/in/karolis-strazdas"
               target="_blank"
@@ -54,6 +69,13 @@
               aria-label="Explore my side project at GitHub"
               >
               <span class="icon medium interactive github"></span>
+            </a>
+
+            <a 
+              href="mailto:karolis.strazdas@pm.me"
+              aria-label="Contact via email."
+              >
+              <span class="icon medium interactive email"></span>
             </a>
           </div>
         </div>
@@ -80,8 +102,8 @@
           <hr />
 
           <p class="info">
-            Hello there. My name is Karolis, and here you can find information
-            about me, the projects I work on, and my professional work experience.
+            Hello there. Here you can find information
+            about me, the personal projects I work on, and my professional work experience.
           </p>
         </article>
       </section>
