--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@
 
       gtag("config", "G-W2H4RB9KP6");
     </script>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Karolis Strazdas",
+      "url": "https://karolis-strazdas.info"
+    }
+    </script>
+
     <script src="./assets/js/main.js"></script>
     <title>Karolis Strazdas</title>
   </head>
