Update position and education texts.

--- a/index.html
+++ b/index.html
@@ -167,32 +167,15 @@
           <div>
             <p>
               Developing dynamic web applications utilizing a full stack
-              technology stack. Responsible for designing and implementing
-              robust solutions, maintaining server configurations, and
+              technology stack, maintaining server configurations, and
               establishing CI/CD pipelines.
             </p>
             <ul>
-              <li>
-                Developed wall projection games and tools using OpenCV
-                (C++/Python), Godot, and ImGui, resulting in enhanced user
-                experiences and increased user engagement.
-              </li>
-              <li>
-                Applied expertise in web development and graphics programming to
-                contribute to the advancement of orthopedics software,
-                delivering innovative solutions for visualization and user
-                interface design.
-              </li>
-              <li>
-                Collaborated on the development of internal software solutions,
-                driving process improvements and enhancing operational
-                efficiency.
-              </li>
-              <li>
-                Played a crucial role in ensuring software quality by writing,
-                maintaining, and executing both manual and automated tests,
-                minimizing bugs and enhancing overall product stability.
-              </li>
+              <li> Developing interactive wall projection games and tools with OpenCV (C++, Python), Godot, ImGui. </li>
+              <li> Doing web development and graphics programming for orthopedics software. </li>
+              <li> Working on internal software solutions for the web platform. </li>
+              <li> Deploying products and services to internal servers and cloud platforms such as AWS, creating configurations for NGINX, Docker, Docker Compose, Jenkins. </li>
+              <li> Writing, maintaining and executing manual functional tests, creating automatic tests. </li>
             </ul>
           </div>
           <hr />
@@ -205,6 +188,7 @@
             <span> PostgreSQL </span>
             <span> Nginx </span>
             <span> Docker </span>
+            <span> Jenkins </span>
           </div>
         </article>
 
@@ -223,36 +207,20 @@
           <h3>Software Engineering Intern • Indeform Ltd.</h3>
           <div>
             <p>
-              Designed and developed debt recovery management system, utilizing
-              modern technologies and industry best practices. Contributed to
+              Designed and developed debt recovery management system. Contributed to
               all phases of the software development life cycle, from
               requirements analysis to system design, implementation, and
               testing.
             </p>
             <ul>
-              <li>
-                Conducted requirements analysis, working with stakeholder to
-                understand their needs and translate them into software
-                solutions.
-              </li>
-              <li>
-                Developed wireframes and user interfaces, enhancing the
-                usability and accessibility of the system for users.
-              </li>
-              <li>
-                Implemented front-end and back-end components, considering
-                performance and ensuring seamless data integration.
-              </li>
-              <li>
-                Tesitng and debugging the system, ensuring a high level of
-                quality and reliability.
-              </li>
+              <li> Performing requirements analysis and system design. </li>
+              <li> Designing and developing debt recovery management system. </li>
             </ul>
           </div>
           <hr />
           <div class="technologies">
             <span> Requirements analysis </span>
-            <span> Systems design </span>
+            <span> System design </span>
             <span> User interface design </span>
             <span> Back-end development </span>
             <span> Front-end development </span>
@@ -279,11 +247,10 @@
           </h3>
           <div>
             <p>
-              Gained comprehensive knowledge about various aspects of software
+              Acquired comprehensive knowledge about various aspects of software
               engineering, computer science, programming languages, tools, data
-              structures, algorithms and so on. Acquired diverse set of skills
-              prepared me to deal with real-world challenges in software
-              systems.
+              structures, algorithms and so on. Acquired diverse set of skills 
+              to deal with real-world challenges in developing software systems.
             </p>
           </div>
           <hr />
