--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       content="personal, portfolio, web developer, karolis strazdas"
     />
 
-    <link rel="canonical" href="https://karolis-strazdas.info" />
+    <link rel="canonical" href="https://karolis-strazdas.lt" />
     <link rel="stylesheet" type="text/css" href="./assets/css/main.css" />
 
     <!-- Open Graph -->
@@ -23,9 +23,9 @@
     <meta property="og:description" content="A personal website." />
     <meta
       property="og:image"
-      content="https://karolis-strazdas.info/assets/images/avatar.jpg"
+      content="https://karolis-strazdas.lt/assets/images/avatar.jpg"
     />
-    <meta property="og:url" content="https://karolis-strazdas.info" />
+    <meta property="og:url" content="https://karolis-strazdas.lt" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Karolis Strazdas" />
 
@@ -48,27 +48,12 @@
       href="./assets/images/favicon/favicon-16x16.png"
     />
     <link rel="manifest" href="./assets/images/favicon/site.webmanifest" />
-
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-W2H4RB9KP6"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-W2H4RB9KP6");
-    </script>
-
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "Karolis Strazdas",
-      "url": "https://karolis-strazdas.info"
+      "url": "https://karolis-strazdas.lt"
     }
     </script>
 
@@ -143,13 +128,12 @@
       <section data-content="about" data-active>
         <article>
           <div>
-            <span> Description </span>
+            <b> Description </b>
           </div>
           <hr />
 
           <p class="info">
-            Hello there. Here you can find information about me, the personal
-            projects I work on, and my professional work experience.
+            Hi, I'm a passionate full-stack developer focused on creating innovative web applications. I primarily work with Python, TypeScript, Django, and Flutter, but I'm always eager to explore new concepts and technologies. My interests extend to functional programming, computer graphics, and literature. Learn more about my projects and professional experience here.
           </p>
         </article>
       </section>
@@ -157,7 +141,7 @@
       <section data-content="positions">
         <article>
           <div data-timespan>
-            <span> Position </span> &bull; <span> June, 2020 </span> →
+            <b> Position </b> &bull; <span> June, 2020 </span> →
             <span> Now </span>
             <span data-date-from="2020-07-13" data-duration></span>
           </div>
@@ -194,7 +178,7 @@
 
         <article>
           <div data-timespan>
-            <span> Position </span> &bull; <span> February, 2020 </span> →
+            <b> Position </b> &bull; <span> February, 2020 </span> →
             <span> May, 2020 </span>
             <span
               data-date-from="2020-02-13"
@@ -231,7 +215,7 @@
       <section data-content="education">
         <article>
           <div data-timespan>
-            <span> Education </span> &bull; <span> September, 2016 </span> →
+            <b> Education </b> &bull; <span> September, 2016 </span> →
             <span> June, 2020 </span>
             <span
               data-date-from="2016-09-01"
@@ -269,7 +253,7 @@
       <section data-content="projects">
         <article>
           <div>
-            <span> Project </span>
+            <b> Project </b>
           </div>
 
           <hr />
@@ -320,13 +304,14 @@
             <span> Flutter </span>
             <span> Dart </span>
             <span> Rust </span>
-            <span> MongoDB + Realm </span>
+            <span> MongoDB </span>
+            <span> Realm </span>
           </div>
         </article>
 
         <article>
           <div>
-            <span> Project </span>
+            <b> Project </b>
           </div>
 
           <hr />
@@ -382,7 +367,7 @@
 
         <article>
           <div>
-            <span> Project </span>
+            <b> Project </b>
           </div>
 
           <hr />
