Use rem instead of px for font sizes, simplify theme switching.

--- a/assets/index.html
+++ b/assets/index.html
@@ -16,7 +16,7 @@
     />
 
     <link rel="canonical" href="https://karolis-strazdas.lt" />
-    <link rel="stylesheet" type="text/css" href="./assets/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
 
     <!-- Open Graph -->
     <meta property="og:title" content="Karolis Strazdas" />
@@ -33,21 +33,21 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="./assets/images/favicon/apple-touch-icon.png"
+      href="images/favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/images/favicon/favicon-32x32.png"
+      href="images/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="./assets/images/favicon/favicon-16x16.png"
+      href="images/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="./assets/images/favicon/site.webmanifest" />
+    <link rel="manifest" href="images/favicon/site.webmanifest" />
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -57,21 +57,19 @@
     }
     </script>
 
-    <script src="./assets/js/main.js"></script>
-    <title>Karolis Strazdas</title>
+    <title> Karolis Strazdas </title>
   </head>
 
   <body class="theme">
     <button
       id="theme-switcher"
       class="icon interactive theme-switcher"
-      data-next-theme="light"
       aria-label="Theme switcher"
     ></button>
 
     <header class="profile col-gap-2">
       <img
-        src="assets/images/avatar.jpg"
+        src="images/avatar.jpg"
         alt="Karolis Strazdas"
         class="avatar"
       />
@@ -411,6 +409,6 @@
       </section>
     </main>
 
-    <footer></footer>
+    <script src="js/main.js"></script>
   </body>
 </html>
