--- a/assets/index.html
+++ b/assets/index.html
@@ -1,53 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="robots" content="index, follow" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="robots" content="index, follow">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta
       name="description"
-      content="Full stack web developer at Indeform Ltd. Interested in various programming paradigms, computer graphics, 3D modelling, and always eager to explore and learn new technologies."
-    />
-    <meta name="author" content="Karolis Strazdas" />
+      content="Full stack web developer at Indeform Ltd. Interested in various programming paradigms, computer graphics, 3D modelling, and always eager to explore and learn new technologies.">
+    <meta name="author" content="Karolis Strazdas">
     <meta
       name="keywords"
-      content="personal, portfolio, web developer, karolis strazdas"
-    />
+      content="personal, portfolio, web developer, karolis strazdas">
 
-    <link rel="canonical" href="https://karolis-strazdas.lt" />
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="canonical" href="https://karolis-strazdas.lt">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Karolis Strazdas" />
-    <meta property="og:description" content="A personal website." />
+    <meta property="og:title" content="Karolis Strazdas">
+    <meta property="og:description" content="A personal website.">
     <meta
       property="og:image"
-      content="https://karolis-strazdas.lt/assets/images/avatar.jpg"
-    />
-    <meta property="og:url" content="https://karolis-strazdas.lt" />
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Karolis Strazdas" />
+      content="https://karolis-strazdas.lt/assets/images/avatar.jpg">
+    <meta property="og:url" content="https://karolis-strazdas.lt">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Karolis Strazdas">
 
     <!-- Favicon -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="images/favicon/apple-touch-icon.png"
-    />
+      href="images/favicon/apple-touch-icon.png">
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="images/favicon/favicon-32x32.png"
-    />
+      href="images/favicon/favicon-32x32.png">
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="images/favicon/favicon-16x16.png"
-    />
-    <link rel="manifest" href="images/favicon/site.webmanifest" />
+      href="images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="images/favicon/site.webmanifest">
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -71,9 +65,8 @@
       <img
         src="images/avatar.jpg"
         alt="Karolis Strazdas"
-        class="avatar"
-      />
-      <hgroup class="flex column row-gap-1">
+        class="avatar">
+      <section class="flex column row-gap-1">
         <h1>Karolis Strazdas</h1>
         <h2>Programmer at Indeform Ltd.</h2>
 
@@ -108,7 +101,7 @@
             </a>
           </div>
         </div>
-      </hgroup>
+      </section>
     </header>
 
     <nav>
@@ -128,7 +121,7 @@
           <div>
             <b> Description </b>
           </div>
-          <hr />
+          <hr>
 
           <p class="info">
             Hi, I'm a passionate full-stack developer focused on creating innovative web applications. I primarily work with Python, TypeScript, Django, and Flutter, but I'm always eager to explore new concepts and technologies. My interests extend to functional programming, computer graphics, and literature. Learn more about my projects and professional experience here.
@@ -144,8 +137,9 @@
             <span data-date-from="2020-07-13" data-duration></span>
           </div>
 
-          <hr />
+          <hr>
           <h3>Programmer • Indeform Ltd.</h3>
+
           <div>
             <p>
               Developing dynamic web applications utilizing a full stack
@@ -160,7 +154,7 @@
               <li> Writing, maintaining and executing manual functional tests, creating automatic tests. </li>
             </ul>
           </div>
-          <hr />
+          <hr>
           <div class="technologies">
             <span> Django </span>
             <span> Python </span>
@@ -185,7 +179,7 @@
             ></span>
           </div>
 
-          <hr />
+          <hr>
           <h3>Software Engineering Intern • Indeform Ltd.</h3>
           <div>
             <p>
@@ -199,7 +193,7 @@
               <li> Designing and developing debt recovery management system. </li>
             </ul>
           </div>
-          <hr />
+          <hr>
           <div class="technologies">
             <span> Requirements analysis </span>
             <span> System design </span>
@@ -222,7 +216,7 @@
             ></span>
           </div>
 
-          <hr />
+          <hr>
           <h3>
             Bachelor's Degree in Software Systems • Kaunas University of
             Technology.
@@ -235,7 +229,7 @@
               to deal with real-world challenges in developing software systems.
             </p>
           </div>
-          <hr />
+          <hr>
           <div class="technologies">
             <span> Systems design </span>
             <span> Discrete mathematics </span>
@@ -254,7 +248,7 @@
             <b> Project </b>
           </div>
 
-          <hr />
+          <hr>
           <h3>
             <a
               class="link bordered"
@@ -297,7 +291,7 @@
               <li>Statictics</li>
             </ul>
           </div>
-          <hr />
+          <hr>
           <div class="technologies">
             <span> Flutter </span>
             <span> Dart </span>
@@ -312,7 +306,7 @@
             <b> Project </b>
           </div>
 
-          <hr />
+          <hr>
           <h3>
             <a
               class="link bordered"
@@ -354,7 +348,7 @@
               <li>Various game modes</li>
             </ul>
           </div>
-          <hr />
+          <hr>
           <div class="technologies">
             <span> TypeScript </span>
             <span> Redis </span>
@@ -368,7 +362,7 @@
             <b> Project </b>
           </div>
 
-          <hr />
+          <hr>
           <h3>
             <a
               class="link bordered"
@@ -397,7 +391,7 @@
               <li>Achievements and statistics</li>
             </ul>
           </div>
-          <hr />
+          <hr>
           <div class="technologies">
             <span> TypeScript </span>
             <span> Alpine.js </span>
