--- a/generator/html/index.html
+++ b/generator/html/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    (% pull header_long %)
-
-    (% for item in elements %)
-        <p> (> item <) </p>
-    (% done %)
-
-    <span> (> content <) </span>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body>
+        (% pull header %)
+        (% pull footer %)
+    </body>
 </html>
