--- a/assets/education.html
+++ b/assets/education.html
@@ -80,16 +80,16 @@
     <div class="tab-navigator">
         <ul id="tabs" class="tabs">
                 <li class="tab" >
-                    <a href="index.html"> About </a>
+                    <a href="/"> About </a>
                 </li>
                 <li class="tab" >
-                    <a href="positions.html"> Positions </a>
+                    <a href="/positions"> Positions </a>
                 </li>
                 <li class="tab"  data-active>
-                    <a href="education.html"> Education </a>
+                    <a href="/education"> Education </a>
                 </li>
                 <li class="tab" >
-                    <a href="projects.html"> Projects </a>
+                    <a href="/projects"> Projects </a>
                 </li>
         </ul>
     </div>
