--- a/assets/index.html
+++ b/assets/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Full stack web developer at Indeform Ltd. Interested in various programming paradigms, computer graphics, 3D modelling, and always eager to explore and learn new technologies.">
+    <meta name="description" content="Full-stack developer focused on creating innovative web applications, always eager to explore and learn new technologies.">
     <meta name="author" content="Karolis Strazdas">
     <meta name="keywords" content="personal, portfolio, web developer, karolis strazdas">
 
@@ -16,7 +15,7 @@
 
     <!-- OpenGraph -->
     <meta property="og:title" content="Karolis Strazdas">
-    <meta property="og:description" content="A personal website.">
+    <meta property="og:description" content="Karolis Strazdas's website.">
     <meta property="og:image" content="https://karolis-strazdas.lt/assets/images/avatar.jpg">
     <meta property="og:url" content="https://karolis-strazdas.lt">
     <meta property="og:type" content="website">
