Update content and typography.

--- a/assets/education.html
+++ b/assets/education.html
@@ -118,7 +118,9 @@
             </div>
 
             <hr>
-            <h3>Bachelor's degree in software systems &bull; Kaunas University of Technology.</h3>
+
+                <h3>Bachelor's degree in software systems &bull; Kaunas University of Technology.</h3>
+
             <div><p>
                     Acquired comprehensive knowledge about various aspects of software
                     engineering, computer science, programming languages, tools, data
@@ -128,9 +130,9 @@
             <hr>
 
             <div class="technologies">
-                    <span> Systems design </span>
+                    <span> Algorithms </span>
                     <span> Discrete mathematics </span>
-                    <span> Analysis of algorithms </span>
+                    <span> Systems architecture &design </span>
                     <span> Web technologies </span>
                     <span> Software development </span>
                     <span> Databases </span>
