--- a/assets/projects.html
+++ b/assets/projects.html
@@ -111,38 +111,36 @@
             </div>
 
             <hr>
-            <h3><a class="link bordered" href="https://github.com/Eoic/Papyrus" target="_blank">
-                        Papyrus
-                    </a> - cross-platform e-book management system</h3>
+
+                <h3><a href="https://github.com/Eoic/Papyrus" target="_blank" class="link bordered">Papyrus</a>
+                    - a cross-platform e-book management system
+                </h3>
+
             <div><p>
-                        I am fond of collecting books, both in physical and digital form,
-                        but none of the applications I used so far to track my collections
-                        met my expectations - Calible, Google Books, Amazon Kindle,
+                        I like collecting books, both in physical and digital form,
+                        but none of the applications that I used so far to track my collections
+                        met my expectations - Calibre, Google Books, Amazon Kindle,
                         Bookshelf, etc. Some of the main pain points for me are ugly user
                         interface, lack of support for multiple platforms, file size
-                        limits, narrow file format support, no ability to manage physical
-                        books, notes managemens.
-                    </p>
-
-                    <p>
-                        By developing Papyrus I aim to address these issues and add some
+                        limits, unsupported file formats, no ability to manage physical
+                        books and notes. I wish address these issues and add some of the more
                         more interesting features like reading statistics, goal tracking,
-                        and potentially some social systems for book borrowing.
-                        Furthermore, I wish to bring this seamless experience to all most
-                        commonly used platforms - Windows, Linux, Web, Android and iOS.
+                        and potentially integrate some form of social interaction (e.g., book borrowing) and 
+                        to bring this experience to the most commonly used platforms - 
+                        Windows, Linux, Web, Android (including e-readers) and iOS.
                     </p>
 
                     <b> Features </b>
                     <ul>
                         <li>
-                        E-book uploading, conversion and management (e.g. shelves,
-                        topics)
+                        File uploads, metadata management and categorization (e.g., shelves,
+                        topics, tags);
                         </li>
-                        <li>Management and progress tracking of physical books</li>
-                        <li>Reading progress synchronization across devices</li>
-                        <li>Notes and annotations</li>
-                        <li>Full-text search</li>
-                        <li>Statictics</li>
+                        <li>Management and progress tracking for physical books;</li>
+                        <li>Reading progress sync across devices;</li>
+                        <li>Notes and annotations;</li>
+                        <li>Full-text search;</li>
+                        <li>Reading statictics;</li>
                     </ul></div>
             <hr>
 
@@ -161,11 +159,49 @@
             </div>
 
             <hr>
-            <h3>
-                    <a class="link bordered" href="https://github.com/Eoic/NetBots" target="_blank">
-                        NetBots
-                    </a> - multiplayer robot programming game
+
+                <h3><a href="https://github.com/Eoic/Canopy" target="_blank" class="link bordered">Canopy</a>
+                    - a real time spatial conversation platform
                 </h3>
+
+            <div><p>
+                        Sounds weird, right? Well, it kind of is. Essentially, it's a real time forum / board 
+                        where conversations grow like virtual forests. Instead of usual threads like on Reddit,
+                         you plant virtual trees as posts or replies to posts on an infinite, shared grid - each tree representing 
+                         an idea, opinion, or a question. Over time, clusters of trees form a virtual forest,
+                        creating a unique conversation space.
+                    </p>
+
+                    <b> How it works? </b>
+                    <ul>
+                        <li>Any user can plant a tree anywhere in the grid. Each tree represents a single comment, question or idea;</li>
+                        <li>To reply, users plant a new tree within a circular radius of the original. This creates a spatial "reply" relationship that mirrors real conversation flow in the layout of the forest;</li>
+                        <li>Trees grow in stages based on interaction such as new replies and upvotes. Each interaction contributes to a tree's growth percentage - once reaches 100%, the tree advances to the next growth stage;</li>
+                        <li>Tree type depends on the intention - different species of trees represent different types of posts. There are questions, opinions, ideas, and news;</li>
+                        <li>Selecting a tree opens a side panel with a traditional view of the thread;</li>
+                    </ul></div>
+            <hr>
+
+            <div class="technologies">
+                    <span> TypeScript </span>
+                    <span> Pixi.js </span>
+                    <span> Python </span>
+                    <span> PostgreSQL </span>
+                    <span> Redis </span>
+            </div>
+        </article>
+        <article>
+            <div >
+                <b> Project </b>
+
+            </div>
+
+            <hr>
+
+                <h3><a href="https://github.com/Eoic/NetBots" target="_blank" class="link bordered">NetBots</a>
+                    - a real-time multiplayer robot programming game
+                </h3>
+
             <div><p>
                         Briefly, it's a robot battle tank programming game that runs in
                         the browser, similar to games such as
@@ -177,11 +213,11 @@
 
                     <b> Features </b>
                     <ul>
-                        <li>Robot programming in JavaScript and through graph editor</li>
-                        <li>Real-time and concurrent battles</li>
-                        <li>Achievements and leaderboards</li>
-                        <li>Custom maps and game rules</li>
-                        <li>Various game modes</li>
+                        <li>Robot programming in JavaScript and through graph editor;</li>
+                        <li>Real-time and concurrent battles;</li>
+                        <li>Achievements and leaderboards;</li>
+                        <li>Custom maps and game rules;</li>
+                        <li>Various game modes;</li>
                     </ul></div>
             <hr>
 
@@ -199,11 +235,11 @@
             </div>
 
             <hr>
-            <h3>
-                    <a class="link bordered" href="https://github.com/Eoic/JigsawQuest" target="_blank">
-                        JigsawQuest
-                    </a> - jigsaw puzzle solving game
+
+                <h3><a href="https://github.com/Eoic/JigsawQuest" target="_blank" class="link bordered">JigwawQuest</a>
+                    - a multiplayer jigsaw puzzle game
                 </h3>
+
             <div><p>
                         Jigsaw puzzle solving game, where user can create a puzzle solving
                         session by selecting provided default image or uploading their
@@ -213,12 +249,12 @@
 
                     <b> Features </b>
                     <ul>
-                        <li>Solo and multiplayer solving sessions</li>
+                        <li>Solo and multiplayer solving sessions;</li>
                         <li>
                         Custom puzzle configurations (e.g. image, number of pieces,
-                        piece placement)
+                        piece placement);
                         </li>
-                        <li>Achievements and statistics</li>
+                        <li>Achievements and statistics;</li>
                     </ul></div>
             <hr>
 
