--- a/assets/index.html
+++ b/assets/index.html
@@ -108,10 +108,32 @@
     <article>
         <div><b> Description </b></div>
         <hr>
-        <p class="info">Hi, I'm a passionate full-stack developer focused on creating innovative web applications. I primarily work
-            with Python, TypeScript, Django, and Flutter, but I'm always eager to explore new concepts and technologies.
-            My interests extend to functional programming, computer graphics, and literature. Learn more about my
-            projects and professional experience here.</p>
+        <p class="info">Hey, I'm a software engineer primarily working with Python, TypeScript, Django, and Flutter.
+            I'm always curious about different technologies, concepts and ideas, and have a particular interest in functional 
+            programming and computer graphics. I also enjoy reading and diving into side projects in my 
+            free time. Feel free to check out my side projects and work experience here.</p>
+
+        <br>
+
+        <b> Reading: </b>
+        <ul>
+                <li> <a class="link bordered" href="https://dataintensive.net/" target="_blank">Designing Data-Intensive Applications</a> </li>
+                <li> <a class="link bordered" href="https://www.oreilly.com/library/view/hands-on-machine-learning/9781492032632/" target="_blank">Hands-On Machine Learning with Scikit-Learn, Keras, and TensorFlow</a> </li>
+        </ul>
+
+        <b> Learning about: </b>
+        <ul>
+                <li> Machine learning; </li>
+                <li> Elixir (programming language); </li>
+        </ul>
+
+        <b> Working on: </b>
+        <ul>
+                <li>
+                    <a class="link bordered" href="https://github.com/Eoic/Canopy" target="_blank">Canopy (side project)</a>
+                    - a real-time spatial conversation platform.
+                </li>
+        </ul>
     </article>
 </section>
 </main>
