Add missing semicolons to list items.

--- a/assets/index.html
+++ b/assets/index.html
@@ -117,8 +117,8 @@
 
         <b> Reading: </b>
         <ul>
-                <li> <a class="link bordered" href="https://dataintensive.net/" target="_blank">Designing Data-Intensive Applications</a> </li>
-                <li> <a class="link bordered" href="https://www.oreilly.com/library/view/hands-on-machine-learning/9781492032632/" target="_blank">Hands-On Machine Learning with Scikit-Learn, Keras, and TensorFlow</a> </li>
+                <li> <a class="link bordered" href="https://dataintensive.net/" target="_blank">Designing Data-Intensive Applications;</a></li>
+                <li> <a class="link bordered" href="https://www.oreilly.com/library/view/hands-on-machine-learning/9781492032632/" target="_blank">Hands-On Machine Learning with Scikit-Learn, Keras, and TensorFlow;</a></li>
         </ul>
 
         <b> Learning about: </b>
@@ -131,7 +131,7 @@
         <ul>
                 <li>
                     <a class="link bordered" href="https://github.com/Eoic/Canopy" target="_blank">Canopy (side project)</a>
-                    - a real-time spatial conversation platform.
+                    - a real-time spatial conversation platform;
                 </li>
         </ul>
     </article>
