Remove book links from 'Currently reading' section.

--- a/assets/index.html
+++ b/assets/index.html
@@ -117,8 +117,12 @@
 
         <b> Reading: </b>
         <ul>
-                <li> <a class="link bordered" href="https://dataintensive.net/" target="_blank">Designing Data-Intensive Applications;</a></li>
-                <li> <a class="link bordered" href="https://www.oreilly.com/library/view/hands-on-machine-learning/9781492032632/" target="_blank">Hands-On Machine Learning with Scikit-Learn, Keras, and TensorFlow;</a></li>
+                <li>
+                        Designing Data-Intensive Applications;
+                </li>
+                <li>
+                        Hands-On Machine Learning with Scikit-Learn, Keras, and TensorFlow;
+                </li>
         </ul>
 
         <b> Learning about: </b>
