--- a/assets/projects.html
+++ b/assets/projects.html
@@ -58,7 +58,7 @@
     <img src="images/avatar.webp" alt="Karolis Strazdas" class="avatar">
     <section class="flex column row-gap-1">
         <h1>Karolis Strazdas</h1>
-        <h2>Programmer at Indeform Ltd.</h2>
+        <h2>Software engineer at Indeform Ltd.</h2>
 
         <div class="profile-location flex col-gap-1">
             <div class="flex row-center-y">
@@ -71,7 +71,7 @@
                     <span class="icon medium interactive linkedin"></span>
                 </a>
 
-                <a href="https://www.github.com/Eoic" target="_blank" aria-label="Explore my side project at GitHub">
+                <a href="https://www.github.com/Eoic" target="_blank" aria-label="Explore my side projects at GitHub">
                     <span class="icon medium interactive github"></span>
                 </a>
 
