Update head tags for better SEO.

--- a/assets/education.html
+++ b/assets/education.html
@@ -6,21 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Full-stack developer focused on creating innovative web applications, always eager to explore and learn new technologies.">
+    <meta name="description" content="Software engineer specializing in Python, TypeScript, and web development. Passionate about creating innovative applications and solving real-world problems. Explore my portfolio and side projects here."> 
     <meta name="author" content="Karolis Strazdas">
-    <meta name="keywords" content="personal, portfolio, web developer, karolis strazdas">
-
     <link rel="canonical" href="https://karolis-strazdas.lt">
     <link rel="stylesheet" type="text/css" href="css/main.css">
 
     <!-- OpenGraph -->
     <meta property="og:title" content="Karolis Strazdas">
-    <meta property="og:description" content="Karolis Strazdas's website.">
-    <meta property="og:image" content="https://karolis-strazdas.lt/assets/images/avatar.jpg">
+    <meta property="og:image" content="https://karolis-strazdas.lt/assets/images/initials.png">
+    <meta property="og:description" content="Software engineer passionate about building innovative applications with Python, TypeScript, and Flutter. Explore my projects and professional background.">
     <meta property="og:url" content="https://karolis-strazdas.lt">
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Karolis Strazdas">
+    <meta property="og:site_name" content="Karolis Strazdas | Software engineer">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
@@ -28,12 +25,27 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
     <link rel="manifest" href="images/favicon/site.webmanifest">
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebSite",
-      "name": "Karolis Strazdas",
-      "url": "https://karolis-strazdas.lt"
-    }
+        {
+            "@context": "https://schema.org",
+            "@type": "Person",
+            "name": "Karolis Strazdas",
+            "url": "https://karolis-strazdas.lt",
+            "image": "https://karolis-strazdas.lt/assets/images/initials.png",
+            "jobTitle": "Software Engineer",
+            "sameAs": [
+                "https://www.linkedin.com/in/karolis-strazdas",
+                "https://github.com/Eoic"
+            ],
+            "worksFor": {
+                "@type": "Organization",
+                "name": "Indeform Ltd."
+            },
+            "address": {
+                "@type": "PostalAddress",content="Software engineer specializing in Python, TypeScript, and web development. Passionate about creating innovative applications and solving real-world problems. Explore my portfolio and side projects here."
+                "addressLocality": "Kaunas",
+                "addressCountry": "Lithuania"
+            }
+        }
     </script>
 
     <script>
