Add versions to static assets and simplify link borders.

--- a/assets/index.html
+++ b/assets/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Software engineer specializing in Python, TypeScript, and web development. Passionate about creating innovative applications and solving real-world problems. Explore my portfolio and side projects here."> 
     <meta name="author" content="Karolis Strazdas">
     <link rel="canonical" href="https://karolis-strazdas.lt">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css?v=1.5">
 
     <!-- OpenGraph -->
     <meta property="og:title" content="Karolis Strazdas">
@@ -20,7 +20,7 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Karolis Strazdas | Software engineer">
 
-    <!-- Favicon -->
+    <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
@@ -158,7 +158,7 @@
 </section>
 </main>
     <canvas id="background"></canvas>
-    <script src="js/main.js"></script>
+    <script src="js/main.js?v=1.5"></script>
 </body>
 
 </html>
