Update about page sections and content, add new project item.

--- a/assets/index.html
+++ b/assets/index.html
@@ -121,37 +121,45 @@
     <article>
         <div><b> Description </b></div>
         <hr>
-        <p class="info">Hey, I'm a software engineer primarily working with Python, TypeScript, Django, and Flutter.
-            I'm always curious about different technologies, concepts and ideas, and have a particular interest in functional 
-            programming and computer graphics. I also enjoy reading and diving into side projects in my 
-            free time. Feel free to check out my side projects and work experience here.</p>
-
-        <br>
-
-        <b> Reading: </b>
+        <p class="info">I'm a software engineer passionate about building useful things 
+            for the web. Curious about a broad range of technologies, concepts 
+            and ideas, I have a particular interest in functional programming 
+            and computer graphics. I also enjoy reading and working on side projects
+            in my free time. Feel free to check out my side projects and work experience here.</p>
+    </article>
+    <article>
+        <div class="flex row-center-y col-gap-1">
+            <span class="icon medium inline read"></span>
+            <b> Reading </b>
+        </div>
         <ul>
                 <li>
-                        <b>Designing Data-Intensive Applications</b> &mdash; <em>Martin Kleppmann</em>;
+                        <span> Building Microservices, 2nd Edition</span> &mdash; <em>Sam Newman</em>;
                 </li>
                 <li>
-                        <b>Hands-On Machine Learning with Scikit-Learn, Keras, and TensorFlow</b> &mdash; <em>Aurélien Géron</em>;
+                        <span>Hands-On Machine Learning with Scikit-Learn, Keras, and TensorFlow</span> &mdash; <em>Aurélien Géron</em>;
                 </li>
                 <li>
-                        <b>Olympos</b> &mdash; <em>Dan Simmons</em>;
+                        <span>Olympos</span> &mdash; <em>Dan Simmons</em>;
                 </li>
         </ul>
-
-        <b> Learning about: </b>
+        <div class="flex row-center-y col-gap-1 mt-1">
+            <span class="icon medium inline learn"></span>
+            <b> Learning about </b>
+        </div>
         <ul>
                 <li> Machine learning; </li>
                 <li> Elixir (programming language); </li>
         </ul>
 
-        <b> Working on: </b>
+        <div class="flex row-center-y col-gap-1 mt-1">
+            <span class="icon medium inline work"></span>
+            <b> Working on </b>
+        </div>
         <ul>
                 <li>
-                    <a class="link bordered" href="https://github.com/Eoic/Canopy" target="_blank">Canopy (side project)</a>
-                    - a real-time spatial conversation platform;
+                    <a class="link bordered" href="https://github.com/WebTiler" target="_blank">WebTiler (side project)</a>
+                    - a web-based tiling window manager;
                 </li>
         </ul>
     </article>
