--- a/assets/projects.html
+++ b/assets/projects.html
@@ -125,6 +125,39 @@
 
             <hr>
 
+                <h3><a href="https://github.com/Eoic/Boids" target="_blank" class="link bordered">Boids</a>
+                    - a flocking simulation
+                </h3>
+
+            <div><p>
+                        A flocking simulation based on the Boids algorithm. The simulation
+                        is based on the original paper by Craig Reynolds, which describes the
+                        behavior of a flock of birds. Implements the three basic rules of
+                        flocking: separation, alignment, cohesion and some additional
+                        features like goal chasing, dynamic boundaries, wind effect, and so on.
+                    </p>
+                    <b> Features </b>
+                    <ul>
+                        <li> Real-time simulation of boid movement;</li>
+                        <li> Configurable environment (number of boids, visual range, speed, wind strength and direction, etc.);
+                        <li> Can save and load simulation settings and state;</li>
+                    </ul></div>
+            <hr>
+
+            <div class="technologies">
+                    <span> Python </span>
+                    <span> Pygame </span>
+                    <span> ImGui </span>
+            </div>
+        </article>
+        <article>
+            <div >
+                <b> Project </b>
+
+            </div>
+
+            <hr>
+
                 <h3><a href="https://github.com/Eoic/Papyrus" target="_blank" class="link bordered">Papyrus</a>
                     - a cross-platform e-book management system
                 </h3>
@@ -178,10 +211,10 @@
                 </h3>
 
             <div><p>
-                        Sounds weird, right? Well, it kind of is. Essentially, it's a real time forum / board 
+                        Essentially, it's a real time forum / board 
                         where conversations grow like virtual forests. Instead of usual threads like on Reddit,
-                         you plant virtual trees as posts or replies to posts on an infinite, shared grid - each tree representing 
-                         an idea, opinion, or a question. Over time, clusters of trees form a virtual forest,
+                        you plant virtual trees as posts or replies to posts on an infinite, shared grid - each tree representing 
+                        an idea, opinion, or a question. Over time, clusters of trees form something like a virtual forest,
                         creating a unique conversation space.
                     </p>
 
