Add different title for each page, update meta tag content.

--- a/assets/index.html
+++ b/assets/index.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Software engineer specializing in Python, TypeScript, and web development. Passionate about creating innovative applications and solving real-world problems. Explore my portfolio and side projects here."> 
+    <meta name="description" content="Software engineer passionate about building useful things for the web and solving real-world problems. Explore my portfolio and side projects here."> 
     <meta name="author" content="Karolis Strazdas">
     <link rel="canonical" href="https://karolis-strazdas.lt">
-    <link rel="stylesheet" type="text/css" href="css/main.css?v=1.5">
+    <link rel="stylesheet" type="text/css" href="css/main.css?v=1.6">
 
     <!-- OpenGraph -->
     <meta property="og:title" content="Karolis Strazdas">
     <meta property="og:image" content="https://karolis-strazdas.lt/images/initials.png">
     <meta property="og:logo" content="https://karolis-strazdas.lt/images/initials.png">
-    <meta property="og:description" content="Software engineer passionate about building innovative applications with Python, TypeScript, and Flutter. Explore my projects and professional background.">
+    <meta property="og:description" content="Software engineer passionate about building innovative web applications. Explore my projects and professional background.">
     <meta property="og:url" content="https://karolis-strazdas.lt">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Karolis Strazdas | Software engineer">
@@ -42,7 +42,7 @@
                 "name": "Indeform Ltd."
             },
             "address": {
-                "@type": "PostalAddress",content="Software engineer specializing in Python, TypeScript, and web development. Passionate about creating innovative applications and solving real-world problems. Explore my portfolio and side projects here."
+                "@type": "PostalAddress",content="Software engineer building useful things for the web. Passionate about creating innovative applications and solving real-world problems. Explore my portfolio and side projects here."
                 "addressLocality": "Kaunas",
                 "addressCountry": "Lithuania"
             }
@@ -61,7 +61,7 @@
 
     <script defer src="/_vercel/speed-insights/script.js"></script>
 
-    <title> Karolis Strazdas </title>
+    <title> Karolis Strazdas • About</title> 
 </head>
 
 <body>
@@ -166,7 +166,7 @@
 </section>
 </main>
     <canvas id="background"></canvas>
-    <script src="js/main.js?v=1.5"></script>
+    <script src="js/main.js?v=1.6"></script>
 </body>
 
 </html>
